--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/fontawesome-all.css" rel="stylesheet">
 	<link href="css/styles.css" rel="stylesheet">
+    
 
 	<!-- Favicon  -->
     <link rel="icon" href="images/favicon.png">
@@ -43,7 +44,7 @@
         <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Corso</a> -->
 
         <!-- Image Logo -->
-        <a class="navbar-brand logo-image" href="index.html" style="color:#FFB300">IIIT Allahabad</a>
+        <a class="navbar-brand logo-image" href="index.html" style="color:#FFB300; font-size:2em;font-family: 'Acme', sans-serif;  text-decoration: none;">IIIT ALLAHABAD</a>
 
         <!-- Mobile Menu Toggle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -189,9 +190,13 @@
                 </div> <!-- end of col -->
                 <div class="col-lg-6">
                     <div class="text-container">
-                        <h2>I’m Garry Your Trainer</h2>
-                        <p>Hi everybody! I am Garry and I will be your main instructor durnig the SEO training course. I have more than 10 years experience in SEO and I am very passionate about this field. Register for the course and let's meet.</p>
-                        <p>Teaching students all about the beste SEO techniques is something I love to do as a full-time job</p>
+                        <h3>Why Behavioural Finance..</h3>
+                        <p>Behavioural finance is an emerging area of study which considers the
+                            theories based on psychology to elucidate the anomalies in the financial
+                            market. Of late there are lots of researches happening in the field of behavioural finance.</p>
+                        <p>With the advent of online trading, the volume and value of
+                            transactions in the stock market have increased tremendously. The investor
+                            is now more active as well as reactive. </p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -205,7 +210,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2>What Will You Learn In Our SEO Focused Training Course</h2>
+                    <h2>What Will You Learn In Our Summer School on Behavioural Finance</h2>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
@@ -290,7 +295,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h2>Key Takeaways</h2>
-                    <p class="p-heading">Here are the main topics that will be covered in the SEO training course. They cover all the basics of SEO and even some advanced techniques that will help you along the way</p>
+                    <p class="p-heading">The course has the objective of introducing the participants with
+                        fundamental of behavioural finance and intends to take them to a stage
+                        where they can apply this knowledge in everyday decision making. Following
+                        are the key learning objectives of this programme..</p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
@@ -302,8 +310,9 @@
                             <i class="fas fa-atom"></i>
                         </div>
                         <div class="card-body">
-                            <h4 class="card-title">Position Analysis</h4>
-                            <p>Understand where your website is currently positioned in search engine queries</p>
+                            <h4 class="card-title">Heading 1</h4>
+                            <p>The course has the objective of introducing the participants with
+                                fundamental of behavioural finance.</p>
                         </div>
                     </div>
                     <!-- end of card -->
@@ -314,8 +323,9 @@
                             <i class="fas fa-key"></i>
                         </div>
                         <div class="card-body">
-                            <h4 class="card-title">Keyword Planning</h4>
-                            <p>Find the best relevant keywords that fit your website SEO strategy in the long run</p>
+                            <h4 class="card-title">Heading 2</h4>
+                            <p>To know in detail the application of various behavioural finance
+                                theories especially in the changing technological context.</p>
                         </div>
                     </div>
                     <!-- end of card -->
@@ -327,8 +337,9 @@
                             <i class="fas fa-newspaper"></i>
                         </div>
                         <div class="card-body">
-                            <h4 class="card-title">Writing Articles</h4>
-                            <p>How to plan your content strategy and write articles that are optimized for SEO</p>
+                            <h4 class="card-title">Heading 3</h4>
+                            <p>It intends to take them to a stage
+                                where they can apply this knowledge in everyday decision making.</p>
                         </div>
                     </div>
                     <!-- end of card -->
@@ -339,8 +350,8 @@
                             <i class="fas fa-link"></i>
                         </div>
                         <div class="card-body">
-                            <h4 class="card-title">Gathering Backlinks</h4>
-                            <p>Backlinks are vital for SEO and we'll teach you everything there is to know about them</p>
+                            <h4 class="card-title">Heading 4</h4>
+                            <p>A special session on the Data Analytics techniques used in behavioral finance research will be the part of the programme;</p>
                         </div>
                     </div>
                     <!-- end of card -->
@@ -351,8 +362,9 @@
                             <i class="far fa-handshake"></i>
                         </div>
                         <div class="card-body">
-                            <h4 class="card-title">Build Partnerships</h4>
-                            <p>Partnerships will help you establish your website or blog as an authority in your field</p>
+                            <h4 class="card-title">Heading 5</h4>
+                            <p>All participants will be given book on
+                                behavioral finance published by PHI publications delivered at their door step </p>
                         </div>
                     </div>
                     <!-- end of card -->
@@ -364,8 +376,9 @@
                             <i class="fas fa-chart-bar"></i>
                         </div>
                         <div class="card-body">
-                            <h4 class="card-title">Evaluate Actions</h4>
-                            <p>Learn how to use the right analytics tools to evaluate your SEO actions and improve them</p>
+                            <h4 class="card-title">Heading 6</h4>
+                            <p>All participants will be given book on
+                                behavioral finance published by PHI publications delivered at their door step</p>
                         </div>
                     </div>
                     <!-- end of card -->
@@ -382,8 +395,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="text-container">
-                        <h2>December 22nd 2020 at Innovation Hub Space</h2>
-                        <p>Our mission is to help people do better SEO. The team is excited to invite you to the next SEO Training Course session which undoubtedly will provide you with the necessary skills to improve your online presence. Fill out the form to register and we'll contact you in less than 24h</p>
+                        <h2>5th Summer School on Behavioural Finance</h2>
+                        <p>The course has the objective of introducing the participants with
+                            fundamental of behavioural finance and intends to take them to a stage
+                            where they can apply this knowledge in everyday decision making.</p>
                         <a class="btn-solid-lg page-scroll" href="#register">REGISTER</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
@@ -393,73 +408,11 @@
     <!-- end of date -->
 
 
-    <!-- Newsletter -->
     <div class="form-2">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h3>Stay updated with news by subscribing to our newsletter and our social channels</h3>
-
-                    <!-- Newsletter Form -->
-                    <form id="newsletterForm" data-toggle="validator" data-focus="false">
-                        <div class="form-group">
-                            <input type="email" class="form-control-input" id="nemail" required>
-                            <label class="label-control" for="nemail">Email</label>
-                            <div class="help-block with-errors"></div>
-                        </div>
-                        <div class="form-group checkbox">
-                            <input type="checkbox" id="nterms" value="Agreed-to-Terms" required>I've read and agree to Corso's written <a href="privacy-policy.html">Privacy Policy</a> and <a href="terms-conditions.html">Terms Conditions</a>
-                            <div class="help-block with-errors"></div>
-                        </div>
-                        <div class="form-group">
-                            <button type="submit" class="form-control-submit-button">SIGN UP</button>
-                        </div>
-                        <div class="form-message">
-                            <div id="nmsgSubmit" class="h3 text-center hidden"></div>
-                        </div>
-                    </form>
-                    <!-- end of newsletter form -->
-
-                    <!-- Social Links -->
-                    <div class="icon-container">
-                        <span class="fa-stack">
-                            <a href="#your-link">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-facebook-f fa-stack-1x"></i>
-                            </a>
-                        </span>
-                        <span class="fa-stack">
-                            <a href="#your-link">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-twitter fa-stack-1x"></i>
-                            </a>
-                        </span>
-                        <span class="fa-stack">
-                            <a href="#your-link">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-pinterest-p fa-stack-1x"></i>
-                            </a>
-                        </span>
-                        <span class="fa-stack">
-                            <a href="#your-link">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-instagram fa-stack-1x"></i>
-                            </a>
-                        </span>
-                        <span class="fa-stack">
-                            <a href="#your-link">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-linkedin-in fa-stack-1x"></i>
-                            </a>
-                        </span>
-                    </div> <!-- end of icon-container -->
-                    <!-- end of social icons -->
-
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of form-2 -->
-    <!-- end of newsletter -->
+          <!--Empty Space-->
+        </div>
+    </div>
 
 
     <!-- Contact -->
@@ -470,19 +423,19 @@
                     <div class="text-container">
                         <h2>Contact Details</h2>
                         <p>For registration questions please get in touch using the contact details below. For any questions use the form.</p>
-                        <h3>Main Office Location</h3>
+                        <h3>Indian Institute of Information Technology</h3>
                         <ul class="list-unstyled li-space-lg">
                             <li class="media">
                                 <i class="fas fa-map-marker-alt"></i>
-                                <div class="media-body">22 Innovative, San Francisco, CA 94043, US</div>
+                                <div class="media-body">Road Devghat, Jhalwa, Prayagraj, Uttar Pradesh 211015</div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-mobile-alt"></i>
-                                <div class="media-body">+44 68 554 332, &nbsp;&nbsp;<i class="fas fa-mobile-alt"></i>&nbsp; +44 31 276 112</div>
+                                <div class="media-body">0532 292 2067, &nbsp;&nbsp;<i class="fas fa-mobile-alt"></i>&nbsp; +44 31 276 112</div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-envelope"></i>
-                                <div class="media-body"><a class="light-gray" href="mailto:contact@zigo.com">contact@zigo.com</a> <i class="fas fa-globe"></i><a class="light-gray" href="#your-link">www.zigo.com</a></div>
+                                <div class="media-body"><a class="light-gray" href="mailto:contact@iiita.ac.in">contact@iiita.ac.in</a> <i class="fas fa-globe"></i><a class="light-gray" href="https://www.iiita.ac.in/">www.iiita.ac.in</a></div>
                             </li>
                         </ul>
                     </div> <!-- end of text-container -->
@@ -530,32 +483,15 @@
     <div class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <div class="footer-col first">
-                        <h5>About Corso</h5>
-                        <p class="p-small">We're passionate about teaching people how to do better SEO for their online presence</p>
+                        <h5>About the Department</h5>
+                        <p class="p-small">The Department of Management Studies, IIIT, Allahabad was constituted with the philosophy of running and
+                            managing the programmes with a focus on Management and Technology.</p>
                     </div>
                 </div> <!-- end of col -->
-                <div class="col-md-3">
-                    <div class="footer-col second">
-                        <h5>Links</h5>
-                        <ul class="list-unstyled li-space-lg p-small">
-                            <li class="media">
-                                <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="terms-conditions.html">Terms & Conditions</a></div>
-                            </li>
-                            <li class="media">
-                                <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="privacy-policy.html">Privacy Policy</a></div>
-                            </li>
-                            <li class="media">
-                                <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="article-details.html">Article Details</a></div>
-                            </li>
-                        </ul>
-                    </div>
-                </div> <!-- end of col -->
-                <div class="col-md-3">
+                
+                <div class="col-md-4">
                     <div class="footer-col third">
                         <h5>Links</h5>
                         <ul class="list-unstyled li-space-lg p-small">
@@ -609,7 +545,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright © 2020 <a href="https://inovatik.com">Inovatik</a> - All rights reserved</p>
+                    <p class="p-small">Copyright © 2021 <a href="https://iiita.ac.in">IIIT Allahabad</a> - All rights reserved</p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
