--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#register">REGISTER <span class="sr-only">(current)</span></a>
+                    <a class="nav-link page-scroll" href="register.html">REGISTER <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="#description">DETAILS</a>
@@ -71,16 +71,13 @@
                 <!-- Dropdown Menu -->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle page-scroll" href="#date" id="navbarDropdown" role="button"
-                        aria-haspopup="true" aria-expanded="false">DATE</a>
+                        aria-haspopup="true" aria-expanded="false">MORE</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="article-details.html"><span class="item-text">ARTICLE
-                                DETAILS</span></a>
+                        <a class="dropdown-item" href="pastsummerschool.html"><span class="item-text">PAST SUMMER SCHOOLS</span></a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="terms-conditions.html"><span class="item-text">TERMS
-                                CONDITIONS</span></a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="privacy-policy.html"><span class="item-text">PRIVACY
-                                POLICY</span></a>
+                        <a class="dropdown-item" href="iiita.html"><span class="item-text">ABOUT IIITA</span></a>
+                        <!--<div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="gallery.html"><span class="item-text">GALLERY</span></a>-->
                     </div>
                 </li>
                 <!-- end of dropdown menu -->
