--- a/iiita.html
+++ b/iiita.html
@@ -29,6 +29,7 @@
     <link href="css/swiper.css" rel="stylesheet">
     <link href="css/magnific-popup.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/index.css">
 
     <!-- Favicon  -->
     <link rel="icon" href="images/favicon.png">
@@ -109,7 +110,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="white">About IIITA </h1>
+                    <h1 class="white">About IIIT Allahabad </h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
