--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/fontawesome-all.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/index.css">
 
 
     <!-- Favicon  -->
@@ -62,7 +63,9 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="register.html">REGISTER <span class="sr-only">(current)</span></a>
+                    <a class="nav-link page-scroll"
+                        href="https://docs.google.com/forms/d/e/1FAIpQLSezXlv9MHBZ9DfqydPA7_koqY_a55ErUieqXXDM-a3kILGsWw/viewform?usp=sf_link">REGISTER
+                        <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="#description">DETAILS</a>
@@ -73,7 +76,8 @@
                     <a class="nav-link dropdown-toggle page-scroll" href="#date" id="navbarDropdown" role="button"
                         aria-haspopup="true" aria-expanded="false">MORE</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="pastsummerschool.html"><span class="item-text">PAST SUMMER SCHOOLS</span></a>
+                        <a class="dropdown-item" href="pastsummerschool.html"><span class="item-text">PAST SUMMER
+                                SCHOOLS</span></a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="iiita.html"><span class="item-text">ABOUT IIITA</span></a>
                         <!--<div class="dropdown-divider"></div>
@@ -114,8 +118,9 @@
                         <h1>Summer School on Behavioural Finance</h1>
                         <p class="p-large">Organized By<br />Department of Management Studies, Indian Institute of
                             Information Technology, Allahabad, Prayagraj</p>
-                        <a class="btn-solid-lg page-scroll" href="#register">REGISTER</a>
-                        <a class="btn-outline-lg page-scroll" href="#instructor">DISCOVER</a>
+                        <a class="btn-solid-lg page-scroll"
+                            href="https://docs.google.com/forms/d/e/1FAIpQLSezXlv9MHBZ9DfqydPA7_koqY_a55ErUieqXXDM-a3kILGsWw/viewform?usp=sf_link">REGISTER</a>
+                        <a class="btn-outline-lg page-scroll" href="/assets/brochure1943.pdf">BROCHURE</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -311,7 +316,7 @@
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-6">
-                    <img class="img-fluid" src="images/students.jpg" alt="alternative">
+                    <img class="img-fluid" src="images/behav_finanace.jpeg" alt="alternative">
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -429,7 +434,8 @@
                         <p>The course has the objective of introducing the participants with
                             fundamental of behavioural finance and intends to take them to a stage
                             where they can apply this knowledge in everyday decision making.</p>
-                        <a class="btn-solid-lg page-scroll" href="#register">REGISTER</a>
+                        <a class="btn-solid-lg page-scroll"
+                            href="https://docs.google.com/forms/d/e/1FAIpQLSezXlv9MHBZ9DfqydPA7_koqY_a55ErUieqXXDM-a3kILGsWw/viewform?usp=sf_link">REGISTER</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
