--- a/index.html
+++ b/index.html
@@ -344,9 +344,10 @@
                             <i class="fas fa-atom"></i>
                         </div>
                         <div class="card-body">
-                            <h4 class="card-title">Heading 1</h4>
-                            <p>The course has the objective of introducing the participants with
-                                fundamental of behavioural finance.</p>
+                            <h4 class="card-title">Opportunities</h4>
+                            <p>The participants will get the opportunity to attend the special session from academician
+                                and industry experts from India
+                                as well as from abroad;</p>
                         </div>
                     </div>
                     <!-- end of card -->
@@ -354,39 +355,39 @@
                     <!-- Card -->
                     <div class="card">
                         <div class="card-image">
-                            <i class="fas fa-key"></i>
+                            <i class="fas fa-chart-area"></i>
                         </div>
                         <div class="card-body">
-                            <h4 class="card-title">Heading 2</h4>
-                            <p>To know in detail the application of various behavioural finance
-                                theories especially in the changing technological context.</p>
-                        </div>
-                    </div>
-                    <!-- end of card -->
-
-
-                    <!-- Card -->
-                    <div class="card">
-                        <div class="card-image">
-                            <i class="fas fa-newspaper"></i>
-                        </div>
-                        <div class="card-body">
-                            <h4 class="card-title">Heading 3</h4>
-                            <p>It intends to take them to a stage
-                                where they can apply this knowledge in everyday decision making.</p>
-                        </div>
-                    </div>
-                    <!-- end of card -->
-
-                    <!-- Card -->
-                    <div class="card">
-                        <div class="card-image">
-                            <i class="fas fa-link"></i>
-                        </div>
-                        <div class="card-body">
-                            <h4 class="card-title">Heading 4</h4>
+                            <h4 class="card-title">Data Analytics</h4>
                             <p>A special session on the Data Analytics techniques used in behavioral finance research
-                                will be the part of the programme;</p>
+                                will be part of the programme</p>
+                        </div>
+                    </div>
+                    <!-- end of card -->
+
+
+                    <!-- Card -->
+                    <div class="card">
+                        <div class="card-image">
+                            <i class="fas fa-certificate"></i>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Certificates</h4>
+                            <p>Proper Certification will be provided to the participants</p>
+                        </div>
+                    </div>
+                    <!-- end of card -->
+
+                    <!-- Card -->
+                    <div class="card">
+                        <div class="card-image">
+                            <i class="fas fa-book-open"></i>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Resources</h4>
+                            <p>All participants of Summer School will be given an original
+                                version book on behavioral finance published by PHI
+                                publications delivered at their doorstep</p>
                         </div>
                     </div>
                     <!-- end of card -->
@@ -397,9 +398,10 @@
                             <i class="far fa-handshake"></i>
                         </div>
                         <div class="card-body">
-                            <h4 class="card-title">Heading 5</h4>
-                            <p>All participants will be given book on
-                                behavioral finance published by PHI publications delivered at their door step </p>
+                            <h4 class="card-title">Present your paper</h4>
+                            <p>The participants will have the opportunity to participate and
+                                present their research papers in the International Conference
+                                organized along with the Summer School </p>
                         </div>
                     </div>
                     <!-- end of card -->
@@ -408,12 +410,11 @@
                     <!-- Card -->
                     <div class="card">
                         <div class="card-image">
-                            <i class="fas fa-chart-bar"></i>
+                            <i class="fas fa-graduation-cap"></i>
                         </div>
                         <div class="card-body">
-                            <h4 class="card-title">Heading 6</h4>
-                            <p>All participants will be given book on
-                                behavioral finance published by PHI publications delivered at their door step</p>
+                            <h4 class="card-title">Publish</h4>
+                            <p>Opportunity to get their papers published in the reputed journals</p>
                         </div>
                     </div>
                     <!-- end of card -->
