--- a/iiita.html
+++ b/iiita.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="css/index.css">
 
     <!-- Favicon  -->
-    <link rel="icon" href="images/favicon.png">
+    <link rel="icon" href="images/iiita.gif">
 </head>
 
 <body data-spy="scroll" data-target=".fixed-top">
@@ -59,11 +59,11 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="register.html">REGISTER <span
-                            class="sr-only">(current)</span></a>
+                    <a class="nav-link page-scroll" href="#description">DETAILS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="index.html#description">DETAILS</a>
+                    <a class="nav-link page-scroll" href="register.html">REGISTER <span
+                            class="sr-only">(current)</span></a>
                 </li>
 
                 <!-- Dropdown Menu -->
