--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
     <!-- Favicon  -->
-    <link rel="icon" href="images/favicon.png">
+    <link rel="icon" href="images/iiita.gif">
 </head>
 
 <body data-spy="scroll" data-target=".fixed-top">
@@ -63,12 +63,12 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
+                    <a class="nav-link page-scroll" href="#description">DETAILS</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link page-scroll"
                         href="https://docs.google.com/forms/d/e/1FAIpQLSezXlv9MHBZ9DfqydPA7_koqY_a55ErUieqXXDM-a3kILGsWw/viewform?usp=sf_link">REGISTER
                         <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#description">DETAILS</a>
                 </li>
 
                 <!-- Dropdown Menu -->
@@ -176,12 +176,6 @@
                             <div class="form-group">
                                 <input type="text" class="form-control-input" id="rphone" name="rphone" required>
                                 <label class="label-control" for="rphone">Phone number</label>
-                                <div class="help-block with-errors"></div>
-                            </div>
-                            <div class="form-group checkbox">
-                                <input type="checkbox" id="rterms" value="Agreed-to-Terms" name="rterms" required>I've
-                                read and agree to Corso's written <a href="privacy-policy.html">Privacy Policy</a> and
-                                <a href="terms-conditions.html">Terms & Conditions</a>
                                 <div class="help-block with-errors"></div>
                             </div>
                             <div class="form-group">
@@ -499,12 +493,6 @@
                         <div class="form-group">
                             <textarea class="form-control-textarea" id="cmessage" required></textarea>
                             <label class="label-control" for="cmessage">Your message</label>
-                            <div class="help-block with-errors"></div>
-                        </div>
-                        <div class="form-group checkbox">
-                            <input type="checkbox" id="cterms" value="Agreed-to-Terms" required>I have read and agree to
-                            Corso's stated <a href="privacy-policy.html">Privacy Policy</a> and <a
-                                href="terms-conditions.html">Terms Conditions</a>
                             <div class="help-block with-errors"></div>
                         </div>
                         <div class="form-group">
