--- a/index.html
+++ b/index.html
@@ -530,15 +530,15 @@
                         <ul class="list-unstyled li-space-lg p-small">
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="article-details.html">Article Details</a></div>
+                                <div class="media-body"><a href="https://docs.google.com/forms/d/e/1FAIpQLSezXlv9MHBZ9DfqydPA7_koqY_a55ErUieqXXDM-a3kILGsWw/viewform?usp=sf_link">Register</a></div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="terms-conditions.html">Terms & Conditions</a></div>
+                                <div class="media-body"><a href="pastsummerschool.html">Past Summer Schools</a></div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="privacy-policy.html">Privacy Policy</a></div>
+                                <div class="media-body"><a href="iiita.html">About IIITA</a></div>
                             </li>
                         </ul>
                     </div>
@@ -578,7 +578,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright © 2021 <a href="https://iiita.ac.in">IIIT Allahabad</a> - All rights
+                    <p class="p-small">Copyright © 2022 <a href="https://iiita.ac.in">IIIT Allahabad</a> - All rights
                         reserved</p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
