--- a/pastsummerschool.html
+++ b/pastsummerschool.html
@@ -218,7 +218,7 @@
                         <ul class="list-unstyled li-space-lg p-small">
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="register.html">Register</a></div>
+                                <div class="media-body"><a href="https://docs.google.com/forms/d/e/1FAIpQLSezXlv9MHBZ9DfqydPA7_koqY_a55ErUieqXXDM-a3kILGsWw/viewform?usp=sf_link">Register</a></div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
@@ -230,7 +230,8 @@
                             </li>
                         </ul>
                     </div>
-                </div> <!-- end of col -->
+                </div>
+
                 <div class="col-md-3">
                     <div class="footer-col fourth">
                         <h5>Social Media</h5>
@@ -266,7 +267,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright © 2021 <a href="https://iiita.ac.in">IIIT Allahabad</a> - All rights
+                    <p class="p-small">Copyright © 2022 <a href="https://iiita.ac.in">IIIT Allahabad</a> - All rights
                         reserved</p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
