landing black page empty space reduced

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">Present your paper</h4>
-                            <p>The participants will have the opportunity to participate and
+                            <p>Participants will have the opportunity to
                                 present their research papers in the International Conference
                                 organized along with the Summer School </p>
                         </div>
