details link updated

--- a/iiita.html
+++ b/iiita.html
@@ -59,7 +59,7 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#description">DETAILS</a>
+                    <a class="nav-link page-scroll" href="index.html#description">DETAILS</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="register.html">REGISTER <span
